## Process this file with automake to create Makefile.in.

AUTOMAKE_OPTIONS = 1.7

# The name of the module.
DOC_MODULE=cairo

# The top-level SGML file.
DOC_MAIN_SGML_FILE=cairo-docs.xml

# Extra options to supply to gtkdoc-scan
SCAN_OPTIONS=--deprecated-guards="CAIRO_DISABLE_DEPRECATED" --ignore-decorators="cairo_public|cairo_private"

# The directory containing the source code. Relative to $(srcdir)
DOC_SOURCE_DIR=../../src

# Used for dependencies
HFILE_GLOB=$(top_srcdir)/src/*.h
CFILE_GLOB=$(top_srcdir)/src/*.c $(top_srcdir)/src/*.h

# Headers to ignore
IGNORE_HFILES=					\
	cairo-analysis-surface-private.h	\
	cairo-arc-private.h			\
	cairo-cache-private.h			\
	cairo-clip-private.h			\
	cairo-font-subset-private.h		\
	cairo-ft-private.h			\
	cairo-gstate-private.h			\
	cairo-hash-private.h			\
	cairo-meta-surface-private.h		\
	cairo-output-stream-private.h		\
	cairo-paginated-surface-private.h	\
	cairo-path-data-private.h		\
	cairo-path-fixed-private.h		\
	cairo-private.h				\
	cairo-quartz-private.h			\
	cairo-scaled-font-subsets-private.h	\
	cairo-surface-fallback-private.h	\
	cairo-wideint-private.h			\
	cairo-win32-private.h			\
	cairo-xlib-private.h			\
	cairo-pdf-test.h			\
	cairo-ps-test.h				\
	cairo-scaled-font-test.h		\
	cairo-svg-test.h			\
	cairo-xlib-test.h			\
	cairoint.h				\
	cairo-atsui.h				\
	cairo-beos.h				\
	cairo-directfb.h			\
	cairo-glitz.h				\
	cairo-quartz.h				\
	cairo-xcb.h				\
	cairo-xcb-xrender.h


# CFLAGS and LDFLAGS for compiling scan program. Only needed
# if $(DOC_MODULE).types is non-empty.
INCLUDES =
GTKDOC_LIBS =

# Extra options to supply to gtkdoc-mkdb
MKDB_OPTIONS=--sgml-mode --output-format=xml

# Extra options to supply to gtkdoc-mktmpl
MKTMPL_OPTIONS=

# Non-autogenerated SGML files to be included in $(DOC_MAIN_SGML_FILE)
content_files =					\
	version.xml				\
	language-bindings.xml

# Images to copy into HTML directory
HTML_IMAGES =

# Extra options to supply to gtkdoc-fixref
FIXXREF_OPTIONS=

include $(top_srcdir)/gtk-doc.make

# Version information for marking the documentation
EXTRA_DIST += version.xml.in

